<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="title_activity_light_control">LightControl</string>
    <string name="Light_control_title">Light Control</string>
    <string name="Light_on">On</string>
    <string name="Light_off">Off</string>
    <string name="title_activity_comms_thread">CommsThread</string>
    
    <string name="intercom_home_broadcast">Broadcast</string>
    <string name="intercom_home_p2p">P2P Call</string>
    <string name="intercom_home_Conf">Conference Call</string>
    <string name="intercom_broadcast_chronometer">Chronometer</string>
    <string name="intercom_broadcast_start">Start</string>
    <string name="intercom_broadcast_stop">Stop</string>
    <string name="intercom_broadcast_announcement">Annoucement from [Device ID]</string>
    <string name="intercom_callerName">Call from [Device ID]</string>
    <string name="intercom_p2p_call">Call</string>
    <string name="intercom_p2p_cancel">Cancel</string>
    <string name="intercom_conference_call">Call</string>
    <string name="intercom_conference_cancel">Cancel</string>
   

</resources>