<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="NewApi" />

    <Chronometer
        android:id="@+id/broadcastTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/intercom_broadcast_chronometer" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.41"
        android:columnCount="2"
        tools:ignore="NewApi" >

        <Button
            android:id="@+id/intercom_broadcast_startbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="gotoAnnouncement"
            android:text="@string/intercom_broadcast_start" />

        <Button
            android:id="@+id/intercom_broadcast_stopbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="@string/intercom_broadcast_stop" />
    </GridLayout>

</LinearLayout>